@@ -1,6 +1,6 @@
 /* -*-pgsql-c-*- */
 /*
- * $Header: /cvsroot/pgpool/pgpool-II/child.c,v 1.5.2.5 2007/09/14 11:06:35 y-asaba Exp $
+ * $Header: /cvsroot/pgpool/pgpool-II/child.c,v 1.5.2.6 2007/10/11 08:32:15 y-asaba Exp $
  *
  * pgpool: a language independent connection pool server for PostgreSQL 
  * written by Tatsuo Ishii
@@ -882,6 +882,12 @@ static StartupPacket *read_startup_packet(POOL_CONNECTION *cp)
 	if (len <= 0)
 	{
 		pool_error("read_startup_packet: incorrect packet length (%d)", len);
+	}
+	else if (len >= MAX_STARTUP_PACKET_LENGTH)
+	{
+		pool_error("read_startup_packet: invalid startup packet");
+		pool_free_startup_packet(sp);
+		return NULL;
 	}
 
 	sp->startup_packet = calloc(len, 1);
